fix swagger host for production
