# docs/swagger.json
@@ -1,4 +1,7 @@
 {
+    "schemes": [
+        "https"
+    ],
     "swagger": "2.0",
     "info": {
         "description": "This is a sample server for a vendor hub.",
@@ -15,7 +18,7 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "https://vendorhub-v2-backend-2.onrender.com",
     "basePath": "/",
     "paths": {
         "/admin/vendors/approved": {
